串口通讯上位机交互

--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -19,7 +19,7 @@ CPU DLL:         S8051.DLL V3.100.0.0
 Dialog DLL:      DP51.DLL V2.62.0.1 
 <h2>Project:</h2>
 E:\005-code\000_学习\51_单片机\51单片机程序\Project.uvproj
-Project File Date:  10/24/2022
+Project File Date:  10/26/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -27,12 +27,13 @@ compiling main.c...
 compiling delay.c...
 compiling separate_button.c...
 compiling task.c...
-user\task.c(59): warning C280: 'ch': unreferenced local variable
+user\task.c(60): warning C280: 'ch': unreferenced local variable
 compiling nixie.c...
 compiling matrixkey.c...
 compiling led.c...
 compiling timer.c...
 compiling uart.c...
+compiling log.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?KEY_STATE?SEPARATE_BUTTON
@@ -46,7 +47,7 @@ linking...
     SEGMENT: ?PR?TIMER1_INIT?TIMER
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?TIMER2_INIT?TIMER
-Program Size: data=29.0 xdata=0 code=990
+Program Size: data=68.1 xdata=0 code=2425
 creating hex file from ".\Objects\Project"...
 ".\Objects\Project" - 0 Error(s), 7 Warning(s).
 </pre>
