独立按键添加蜂鸣器

--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -35,6 +35,7 @@ compiling led.c...
 compiling timer.c...
 compiling uart.c...
 compiling log.c...
+compiling beep.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?GET_TASK_STATE?TASK
@@ -44,20 +45,9 @@ linking...
     SEGMENT: ?PR?TIMER1_INIT?TIMER
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?TIMER2_INIT?TIMER
-*** WARNING L1: UNRESOLVED EXTERNAL SYMBOL
-    SYMBOL:  FREQTABLE
-    MODULE:  .\Objects\timer.obj (TIMER)
-*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
-    SYMBOL:  FREQTABLE
-    MODULE:  .\Objects\timer.obj (TIMER)
-    ADDRESS: 08F2H
-*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
-    SYMBOL:  FREQTABLE
-    MODULE:  .\Objects\timer.obj (TIMER)
-    ADDRESS: 0900H
-Program Size: data=88.1 xdata=0 code=2675
+Program Size: data=87.1 xdata=0 code=2662
 creating hex file from ".\Objects\Project"...
-".\Objects\Project" - 0 Error(s), 9 Warning(s).
+".\Objects\Project" - 0 Error(s), 6 Warning(s).
 </pre>
 </body>
 </html>
