--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -24,11 +24,11 @@ Project File Date:  10/26/2022
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 compiling main.c...
-main.c(35): warning C206: 'key_state': missing function-prototype
+main.c(64): warning C206: 'key_state': missing function-prototype
 compiling delay.c...
 compiling separate_button.c...
 compiling task.c...
-user\task.c(61): warning C280: 'ch': unreferenced local variable
+user\task.c(63): warning C280: 'ch': unreferenced local variable
 compiling nixie.c...
 compiling matrixkey.c...
 compiling led.c...
@@ -36,7 +36,13 @@ compiling timer.c...
 compiling uart.c...
 compiling log.c...
 compiling beep.c...
+compiling AT24C02.c...
+compiling I2C.c...
+compiling DS18B20.c...
+compiling OneWire.c...
 linking...
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_DELAY?DELAY
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?GET_TASK_STATE?TASK
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
@@ -45,9 +51,15 @@ linking...
     SEGMENT: ?PR?TIMER1_INIT?TIMER
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?TIMER2_INIT?TIMER
-Program Size: data=87.1 xdata=0 code=2662
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?CO?BEEP
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?DS18B20_CONVERTT?DS18B20
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?DS18B20_READT?DS18B20
+Program Size: data=15.1 xdata=158 code=5084
 creating hex file from ".\Objects\Project"...
-".\Objects\Project" - 0 Error(s), 6 Warning(s).
+".\Objects\Project" - 0 Error(s), 10 Warning(s).
 </pre>
 </body>
 </html>
